# crop-sequence-boundaries-v2

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  PRICING.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build_docker.yml  ci.yaml  codeql.yml  release.yml
configs/: conus.yaml  local.yaml
docs/: usda_smoothing_reference.md
examples/cluster/: README.md  bench_eliminate.sbatch  build_pmtiles.sbatch  conus_parity.sbatch  conus_run.sbatch  eval_output.sbatch  prep_parity_inputs.sbatch  prep_usda.sbatch  tile_sweep.sbatch
paper/: Makefile  README.md  csb.bib  csb_cea.tex  csb_icml2026.tex
paper/figures/: ablation_results.json  debug_combo_grid.py  debug_over_split.py  field_mismatch_examples.py  filter_sweep_results.json  make_acres_scatter.py  make_per_class.py  make_per_tile_iou.py  make_stage_breakdown.py  per_field_iou.json  per_field_iou.py  run_ablation.py  sweep_focal_filter.py
results/: bench_eliminate_i15.json
scripts/: conus_parity.py  conus_run.sbatch  multi_tile_parity.py  multi_tile_parity.sbatch  parity_vs_usda.py  patch_geoparquet_crs.py  prep_parity_inputs.py
src/csb/: __init__.py  bench.py  boundaries.py  cli.py  config.py  download.py  focal.py  instance_metrics.py  io.py  metrics_counts.py  object_eval.py  parity.py  pmtiles.py  polygon_eliminate.py  polygonize.py  postprocess.py  raster_eliminate.py  reclass.py  roads.py  sedona_eliminate.py  tile_experiment.py  usda_filter.py  utils.py  visualize.py
src/csb/_data/: default.yaml
src/csb/data/: CDL_tempGeneralCode.csv
tests/: conftest.py  test_cli.py  test_cli_invoke.py  test_config.py  test_download.py  test_e2e_pipeline.py  test_focal.py  test_instance_metrics.py  test_io.py  test_object_eval.py  test_parallel.py  test_polygon_eliminate.py  test_polygonize.py  test_polygonize_pipeline.py  test_postprocess_pipeline.py  test_reclass.py  test_shard_tiles.py  test_usda_filter.py  test_vector.py
web/: app.js  index.html
